internal/xds/translator/testdata/out/xds-ir/local-ratelimit-method-match.routes.yaml
- ignorePortInHostMatching: true
  name: method-match-listener
  virtualHosts:
  - domains:
    - '*'
    name: method-match-listener/*
    routes:
    - match:
        prefix: /
      name: route-method-post
      route:
        cluster: post-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-method
              value: rule-0-method
            tokenBucket:
              fillInterval: 1s
              maxTokens: 20
              tokensPerFill: 20
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-method
                descriptorValue: rule-0-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: POST
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 100
            tokensPerFill: 100
    - match:
        pathSeparatedPrefix: /data
      name: route-method-get
      route:
        cluster: get-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-method
              value: rule-0-method
            tokenBucket:
              fillInterval: 1s
              maxTokens: 200
              tokensPerFill: 200
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-method
                descriptorValue: rule-0-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: GET
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 100
            tokensPerFill: 100
    - match:
        pathSeparatedPrefix: /update
      name: route-method-put
      route:
        cluster: put-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-method
              value: rule-0-method
            tokenBucket:
              fillInterval: 1s
              maxTokens: 30
              tokensPerFill: 30
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-method
                descriptorValue: rule-0-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: PUT
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 100
            tokensPerFill: 100
    - match:
        pathSeparatedPrefix: /delete
      name: route-method-delete
      route:
        cluster: delete-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-method
              value: rule-0-method
            tokenBucket:
              fillInterval: 1s
              maxTokens: 10
              tokensPerFill: 10
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-method
                descriptorValue: rule-0-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: DELETE
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 100
            tokensPerFill: 100
    - match:
        pathSeparatedPrefix: /api
      name: route-multiple-methods
      route:
        cluster: multi-method-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-method
              value: rule-0-method
            tokenBucket:
              fillInterval: 60s
              maxTokens: 50
              tokensPerFill: 50
          - entries:
            - key: rule-1-method
              value: rule-1-method
            tokenBucket:
              fillInterval: 60s
              maxTokens: 40
              tokensPerFill: 40
          - entries:
            - key: rule-2-method
              value: rule-2-method
            tokenBucket:
              fillInterval: 60s
              maxTokens: 20
              tokensPerFill: 20
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-method
                descriptorValue: rule-0-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: POST
          - actions:
            - headerValueMatch:
                descriptorKey: rule-1-method
                descriptorValue: rule-1-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: PUT
          - actions:
            - headerValueMatch:
                descriptorKey: rule-2-method
                descriptorValue: rule-2-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: DELETE
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 100
            tokensPerFill: 100
    - match:
        pathSeparatedPrefix: /premium
      name: route-method-and-header
      route:
        cluster: premium-post-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-match-0
              value: rule-0-match-0
            - key: rule-0-method
              value: rule-0-method
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 1000
              tokensPerFill: 1000
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-api-key
                  stringMatch:
                    exact: premium
            - headerValueMatch:
                descriptorKey: rule-0-method
                descriptorValue: rule-0-method
                expectMatch: true
                headers:
                - name: :method
                  stringMatch:
                    exact: POST
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 100
            tokensPerFill: 100
